<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onclick_addItem">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/tab1" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab2" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab3" />
        </com.google.android.material.tabs.TabLayout>

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:autofillHints=""
            android:background="#DDDDDD"
            android:contentDescription="@string/item"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/item" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="#DDDDDD"
            android:contentDescription="@string/date"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:autofillHints=""
            android:background="#DDDDDD"
            android:contentDescription="@string/price"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:background="#DDDDDD"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/category" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/additem"
        android:onClick="onclick_addItem"
        android:src="@android:drawable/ic_input_add" />

    "
</androidx.coordinatorlayout.widget.CoordinatorLayout>